# strongswan

./: configure.ac
src/libcharon/: Makefile.am
src/libcharon/plugins/jitike/: Makefile.am  jitike_attribute.c  jitike_attribute.h  jitike_cache.c  jitike_cache.h  jitike_child.c  jitike_child.h  jitike_ctl.c  jitike_ctl.h  jitike_dispatcher.c  jitike_dispatcher.h  jitike_ike.c  jitike_ike.h  jitike_kernel.c  jitike_kernel.h  jitike_message.c  jitike_message.h  jitike_plugin.c  jitike_redis.c  jitike_redis.h  jitike_segments.c  jitike_segments.h  jitike_socket.c  jitike_socket.h  jitike_tunnel.c  jitike_tunnel.h
